@@ -3,6 +3,7 @@ package com.bovo.Bovo.modules.user.dto.security;
 import com.bovo.Bovo.common.Provider;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
@@ -12,9 +13,9 @@ import java.util.List;
 @Getter
 public class AuthenticatedUserId implements UserDetails {
     private final Integer userId;
-    private final Provider provider;
+    private final String provider;
 
-    public AuthenticatedUserId(Integer userId, Provider provider) {
+    public AuthenticatedUserId(Integer userId, String provider) {
         this.userId = userId;
         this.provider = provider;
     }
@@ -23,13 +24,13 @@ public class AuthenticatedUserId implements UserDetails {
         return userId;
     }
 
-    public Provider getProvider() {
+    public String getProvider() {
         return provider;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
